feat: implement export cleanup workflow and merge policy

--- a/web/locales/i18n.json
+++ b/web/locales/i18n.json
@@ -8,10 +8,16 @@
       "mode_incremental": "Incremental",
       "mode_full": "Full",
       "output": "Output",
+      "export_policy": "Export policy",
+      "export_merge": "Single file",
+      "export_archive": "Keep backups",
       "reset_state": "Reset state",
       "debug_mode_label": "Debug mode (read-only)",
       "debug_mode_hint": "Skip state writes and surface verbose logs for testing",
       "debug_mode": "Debug mode",
+      "cleanup_exports": "Cleanup exports after analysis",
+      "cleanup_preview": "Preview files to delete",
+      "cleanup_hint": "A confirmation dialog will appear; in debug mode the canonical export is also removed.",
       "analyze": "Analyze",
       "analyzing": "Analyzing...",
       "result_title": "Result",
@@ -40,7 +46,19 @@
       "no": "No",
       "status_info": "Status",
       "complete_days": "Complete days",
-      "last_time": "Last analysis time"
+      "last_time": "Last analysis time",
+      "cleanup_modal_title": "Confirm cleanup",
+      "cleanup_modal_desc": "The following files will be deleted after analysis:",
+      "cleanup_backups": "Timestamp backups",
+      "cleanup_canonical": "Canonical export (debug mode)",
+      "cleanup_none": "No files match the cleanup criteria.",
+      "cleanup_confirm": "Confirm cleanup & analyze",
+      "cancel": "Cancel",
+      "cleanup_need_file": "Select a file before previewing cleanup.",
+      "cleanup_performed": "Cleanup completed.",
+      "cleanup_performed_with": "Cleanup completed. Removed: {{files}}",
+      "cleanup_skipped": "Cleanup skipped.",
+      "cleanup_stale": "Cleanup skipped because target files changed. Please preview again."
     }
   },
   "zh": {
@@ -52,10 +70,16 @@
       "mode_incremental": "增量",
       "mode_full": "完整",
       "output": "輸出格式",
+      "export_policy": "匯出策略",
+      "export_merge": "保留單一檔案",
+      "export_archive": "保留歷史備份",
       "reset_state": "重置狀態",
       "debug_mode_label": "除錯模式（唯讀）",
       "debug_mode_hint": "測試時避免寫入狀態並輸出更多除錯訊息",
       "debug_mode": "除錯模式",
+      "cleanup_exports": "分析後清理備份",
+      "cleanup_preview": "預覽要刪除的檔案",
+      "cleanup_hint": "送出前會跳出確認視窗；除錯模式下會連同本次輸出的主檔案一併移除。",
       "analyze": "開始分析",
       "analyzing": "分析中...",
       "result_title": "分析結果",
@@ -84,7 +108,19 @@
       "no": "否",
       "status_info": "狀態資訊",
       "complete_days": "完整工作日",
-      "last_time": "上次分析時間"
+      "last_time": "上次分析時間",
+      "cleanup_modal_title": "確認清理文件",
+      "cleanup_modal_desc": "以下檔案將在分析後被刪除：",
+      "cleanup_backups": "時間戳備份檔",
+      "cleanup_canonical": "主檔案（除錯模式）",
+      "cleanup_none": "沒有符合條件的檔案。",
+      "cleanup_confirm": "確認清理並分析",
+      "cancel": "取消",
+      "cleanup_need_file": "請先選擇檔案再預覽清理項目。",
+      "cleanup_performed": "清理作業完成。",
+      "cleanup_performed_with": "清理完成，移除：{{files}}",
+      "cleanup_skipped": "清理已略過。",
+      "cleanup_stale": "清理目標已變動，請重新預覽確認。"
     }
   }
 }
